Wrap up revised download - Remove mobile styling on strip output. - Fix canvas scaling issue. - Reduce length of cache buster string. - Add script version number for cache busting js/css files. - Disable php error output

--- a/style.css
+++ b/style.css
@@ -843,8 +843,8 @@ progress[value]::-webkit-progress-value {
 	margin: 0;
     padding: 0;
     width: fit-content;
-	position: absolute;
-	left: 150%;
+	/* position: absolute;
+	left: 150%; */
 }
 
 #strip-output > .panel {
@@ -870,6 +870,11 @@ progress[value]::-webkit-progress-value {
 	max-width: none;
 	box-shadow: none;
 	padding-bottom: 16px;
+	flex-direction: inherit;
+}
+
+#strip-output > #strip .panel {
+	margin: 5px;
 }
 
 #strip-output > #strip .panel .bubble {
